--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>test test</title>
+</head>
+<body>
+
+<h1>Hello Internet!</h1>
+<p>This is a paragraph.</p><script>alert('Random Javascript!');</script>
+</body>
+</html>
