--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>test test</title>
-</head>
-<body>
+	<html>
+		<head>
 
-<h1>Hello Internet!</h1>
-<p>This is a paragraph.</p><script>alert('Random Javascript!');</script>
-</body>
-</html>
+			<title>getdisowned</title>
+
+		</head>
+
+		<body>
+
+			<h1>Hello Internet!</h1>
+
+		</body>
+	</html>
