--- a/46379042.html
+++ b/46379042.html
@@ -9,7 +9,10 @@
 		<body>
 
 			<h1>page 2</h1>
-			<p> test test test test <p>
+
+			<align=middle>
+				<p> test test test test <p>
+			</align>
 
 		</body>
 	</html>
