--- a/46379042.html
+++ b/46379042.html
@@ -10,9 +10,9 @@
 
 			<h1>page 2</h1>
 
-			<align=middle>
-				<p> test test test test <p>
-			</align>
-
+			<p> 
+				<align=middle>test test test test </align>
+			<p>
+				
 		</body>
 	</html>
