--- a/46379042.html
+++ b/46379042.html
@@ -10,8 +10,8 @@
 
 			<h1>page 2</h1>
 
-			<p> 
-				<align=middle> test test test test </align>
+			<p align=middle> 
+				test test test test 
 			<p>
 
 		</body>
