--- a/46379042.html
+++ b/46379042.html
@@ -8,11 +8,13 @@
 
 		<body>
 
-			<h1>page 2</h1>
+			<h1>art</h1>
 
 			<p align=middle> 
-				test test test test 
+				specimen 1
 			</p>
+
+			<img src="20190916_215305.jpg" alt="specimen 1">
 
 		</body>
 	</html>
