--- a/46379042.html
+++ b/46379042.html
@@ -14,7 +14,6 @@
 				specimen 1
 			</p>
 
-			<img src="20190916_215305.jpg" alt="specimen 1">
-
+			<img src="20190916_215305.jpg" alt="specimen 1" style="width:965px;height:1346px;">
 		</body>
 	</html>
