--- a/46379042.html
+++ b/46379042.html
@@ -10,10 +10,10 @@
 
 			<h1>art</h1>
 
-			<p align=middle> 
+			<p align=left> 
 				specimen 2
 			</p>
 
-			<img src="20190916_215305.jpg" alt="specimen 1" style="width:965px;height:1346px;">
+			<img src="20190916_215305.jpg" alt="specimen 1" style="width:483px;height:673px;">
 		</body>
 	</html>
