--- a/46379042.html
+++ b/46379042.html
@@ -8,11 +8,9 @@
 
 		<body>
 
-			<h1>art</h1>
+			<h1 align=center>art</h1>
 
-			<p align=left> 
-				specimen 2
-			</p>
+			<p align=left>specimen 2</p>
 
 			<img src="20190916_215305.jpg" alt="specimen 1" style="width:483px;height:673px;">
 		</body>
