--- a/46379042.html
+++ b/46379042.html
@@ -8,10 +8,16 @@
 
 		<body>
 
+			<style>
+				width: 50%;
+				hight: 50%;
+			</style>
+
+
 			<h1 align=center>art</h1>
 
 			<p align=left>specimen 2</p>
 
-			<img src="20190916_215305.jpg" alt="specimen 1" style="width:483px;height:673px;">
+			<img src="20190916_215305.jpg" alt="specimen 1">
 		</body>
 	</html>
