--- a/46379042.html
+++ b/46379042.html
@@ -41,7 +41,6 @@
 
 
 			<p align=left>specimen 2</p>
-			<img src="20190916_215305.jpg" alt="specimen 1">
 
 
 
@@ -57,6 +56,20 @@
 			    <img src="mrsbruncencenstienways.jpg" alt="mrsbruncencenstienways">
 			  </div>
 			</div>
+
+			<div class="row">
+			  <div class="column">
+			    <img src="selfportrait.jpg" alt="selfportrait">
+			  </div>
+			  <div class="column">
+			    <img src="english.jpg" alt="english">
+			  </div>
+			  <div class="column">
+			    <img src="insomnia.jpg" alt="insomnia">
+			  </div>
+			</div>
+
+
 
 
 
