--- a/46379042.html
+++ b/46379042.html
@@ -40,7 +40,7 @@
 
 
 
-			<p align=left>specimen 2</p>
+		
 
 
 
@@ -70,6 +70,10 @@
 			</div>
 
 
+			<div class="row">
+			  <div class="column">
+			    <img src="map.jpg" alt="map">
+			  </div>
 
 
 
