--- a/46379042.html
+++ b/46379042.html
@@ -36,14 +36,11 @@
 
 
 			<h1 align=center>art</h1>
+
+
+			<a href="index.html" aling=left >home</a>
+
 		
-
-
-
-		
-
-
-
 
 			<div class="row">
 			  <div class="column">
