--- a/63274976.html
+++ b/63274976.html
@@ -26,20 +26,35 @@
 			<h1>thoughts</h1>
 
 		
-			<p1>
+			<p4>
 				<i> october 17 19 </i>
 
 				Whenever I meet a new person they usually start chipping away at whatever walls I've put up. And that's not their fault of course. But over time I'll get more and more comfortable talking with them and one day I'll let something slip through that wall. Something real. Something that I may have wanted to say from the start but never felt comfortable saying. And most people are scared by that, either because they don't relate to whatever it is, or just because I said something real at all. And then that person will distance themselves one way or another. And then I build that wall they chipped through twice as tall and twice as strong. And I meet a different person and bla bla bla the cycle continues. 
 
 				I think my greatest fear is building that wall so tall and so strong that I trap myself inside it.
-			</p1>
+			</p4>
 
 			<p2>
+				<i> august 21 19 </i>
 
-
-
+				The meniscus of my shot glass reminds me of my shop class
 
 			</p2>	
+
+			<p3>				
+				<i> july 8 19 </i>
+				Everything that would normally precede siracha, but then not siracha
+
+			</p3>
+
+			<p1>
+				<i> june 27 19 </i>
+				Elopsterbation
+			</p1>
+
+
+
+
 
 		</body>
 	</html>
