--- a/46379042.html
+++ b/46379042.html
@@ -35,7 +35,7 @@
 			</style>
 
 
-			<h1 align=center>art</h1>
+			<h1 align=center>artaaaaaaaaaaa</h1>
 
 
 			<a href="index.html" aling=left >home</a>
