--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 			<a href="46379042.html"> art </a> 
 			<br> <br> 
 			<a href="63274976.html"> thoughts </a> 
+			<br> <br>
+			<a href="54687395.html"> music </a> 
+			
 		</body>
 	</html>
