--- a/54687395.html
+++ b/54687395.html
@@ -21,10 +21,11 @@
 			
 			<a href="index.html" aling=left >home</a>
 			
-			<iframe width="640" height="360"
-			src="https://www.youtube.com/embed/q50XsvQCOpE">
-			</iframe> 
-
+			<iframe width="853" height="480" src="https://www.youtube.com/embed/q50XsvQCOpE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 		</body>
 	</html>
+
+
+
+
