--- a/63274976.html
+++ b/63274976.html
@@ -39,21 +39,21 @@
 			<p>
 				<i> january 10 2020 </i> <br>
 
-			The more I think and grow the less of a personality I seem to have. Let me explain with some examples:
+			The more I think and grow the less of a personality I seem to have. Let me explain with some examples:<br> 
 
 			Music:
-			When I first really dove into music I listened to a single genre of music and thought I hated everything else. Cage the elephant and similar sounds where the only thing I could appreciate. I thought I hated country, pop, rap, etc.
+			When I first really dove into music I listened to a single genre of music and thought I hated everything else. Cage the elephant and similar sounds where the only thing I could appreciate. I thought I hated country, pop, rap, etc.<br> 
 
-			But as I've listened to more and more I have learned to appreciate the purpose of every song out there. My personal taste has all but disappeared. I've explored most genres out there and even if they're objectively bad, I can still find appreciation for them. An example is the band paper ceiling. The vocalist is often off key, out of breath, and barely uses dynamics. It sounds very bad simply put. But somehow I still made it through all of their albums with only intrigue. That's my overwhelming feeling with listening to anything recently, not enjoyment but intrigue.
+			But as I've listened to more and more I have learned to appreciate the purpose of every song out there. My personal taste has all but disappeared. I've explored most genres out there and even if they're objectively bad, I can still find appreciation for them. An example is the band paper ceiling. The vocalist is often off key, out of breath, and barely uses dynamics. It sounds very bad simply put. But somehow I still made it through all of their albums with only intrigue. That's my overwhelming feeling with listening to anything recently, not enjoyment but intrigue.<br> 
 
 			Politics: 
-			At this point I have no opinion on any political topic, movement, party, etc. Everyone has a reason to believe whatever they belive in right? So who am I to say they're wrong. I used to be very strongly in favor of one set of ideas, and now I legitimately can't decide on anything. I find myself playing the role of "the other people" in any discussion about politics. Because everyone has a point and the world is too complicated for absolutes.
+			At this point I have no opinion on any political topic, movement, party, etc. Everyone has a reason to believe whatever they belive in right? So who am I to say they're wrong. I used to be very strongly in favor of one set of ideas, and now I legitimately can't decide on anything. I find myself playing the role of "the other people" in any discussion about politics. Because everyone has a point and the world is too complicated for absolutes.<br> 
 
 			People:
-			It's easy to come to a quick conclusion about someone based on little information. You hear one story and all of the sudden that person is written off as a jerk or boring or whatever else. But everyone has a story. Everyone has a long list of events that caused them to be the way they are. So why pass judgement so quickly? Everyone is constantly trying to adapt to their surroundings, and everyones surroundings are constantly changing. For every time someone acts there is a set of circumstances that lead them to make that choice. And you can never know everything someone else knows, so its flawed to judge them for that. My point is that I have almost no opinions on anyone's character.
+			It's easy to come to a quick conclusion about someone based on little information. You hear one story and all of the sudden that person is written off as a jerk or boring or whatever else. But everyone has a story. Everyone has a long list of events that caused them to be the way they are. So why pass judgement so quickly? Everyone is constantly trying to adapt to their surroundings, and everyones surroundings are constantly changing. For every time someone acts there is a set of circumstances that lead them to make that choice. And you can never know everything someone else knows, so its flawed to judge them for that. My point is that I have almost no opinions on anyone's character.<br> 
 
 
-			The more I think about things the more indifferent I become towards them. To the point where I have no opinions at all. The only things I have strong feeling about are things that I'm ignorant about. 
+			The more I think about things the more indifferent I become towards them. To the point where I have no opinions at all. The only things I have strong feeling about are things that I'm ignorant about. <br> 
 
 			What makes a person unique? What is a personality traits? I see people all the time say that "xyz isn't a personality traits" to the point that nothing is a personality trait. So what is a personality and how do I figure out mine?<br><br> 	
 			</p>
@@ -63,7 +63,7 @@
 			<p>
 				<i> october 17 19 </i> <br>
 
-				Whenever I meet a new person they usually start chipping away at whatever walls I've put up. And that's not their fault of course. But over time I'll get more and more comfortable talking with them and one day I'll let something slip through that wall. Something real. Something that I may have wanted to say from the start but never felt comfortable saying. And most people are scared by that, either because they don't relate to whatever it is, or just because I said something real at all. And then that person will distance themselves one way or another. And then I build that wall they chipped through twice as tall and twice as strong. And I meet a different person and bla bla bla the cycle continues. 
+				Whenever I meet a new person they usually start chipping away at whatever walls I've put up. And that's not their fault of course. But over time I'll get more and more comfortable talking with them and one day I'll let something slip through that wall. Something real. Something that I may have wanted to say from the start but never felt comfortable saying. And most people are scared by that, either because they don't relate to whatever it is, or just because I said something real at all. And then that person will distance themselves one way or another. And then I build that wall they chipped through twice as tall and twice as strong. And I meet a different person and bla bla bla the cycle continues. <br> 
 
 				I think my greatest fear is building that wall so tall and so strong that I trap myself inside it.<br><br> 	
 			</p>
