--- a/63274976.html
+++ b/63274976.html
@@ -55,7 +55,7 @@
 
 			The more I think about things the more indifferent I become towards them. To the point where I have no opinions at all. The only things I have strong feeling about are things that I'm ignorant about. <br> <br> 
 
-			What makes a person unique? What is a personality traits? I see people all the time say that "xyz isn't a personality traits" to the point that nothing is a personality trait. So what is a personality and how do I figure out mine?<br><br> 	
+			What makes a person unique? What is a personality traits? I see people all the time say that "xyz isn't a personality traits" to the point that nothing is a personality trait. So what is a personality and how do I figure out mine?<br><br><br>  	
 			</p>
 
 
@@ -65,25 +65,25 @@
 
 				Whenever I meet a new person they usually start chipping away at whatever walls I've put up. And that's not their fault of course. But over time I'll get more and more comfortable talking with them and one day I'll let something slip through that wall. Something real. Something that I may have wanted to say from the start but never felt comfortable saying. And most people are scared by that, either because they don't relate to whatever it is, or just because I said something real at all. And then that person will distance themselves one way or another. And then I build that wall they chipped through twice as tall and twice as strong. And I meet a different person and bla bla bla the cycle continues. <br> <br> 
 
-				I think my greatest fear is building that wall so tall and so strong that I trap myself inside it.<br><br> 	
+				I think my greatest fear is building that wall so tall and so strong that I trap myself inside it.<br><br> 	<br> 
 			</p>
 
 			<p>
 				<i> august 21 19 </i> <br>
 
-				The meniscus of my shot glass reminds me of my shop class<br><br> 
+				The meniscus of my shot glass reminds me of my shop class<br><br> <br> 
 
 			</p>	
 
 			<p>				
 				<i> july 8 19 </i>  <br>
- 				Everything that would normally precede siracha, but then not siracha<br><br> 
+ 				Everything that would normally precede siracha, but then not siracha<br><br> <br> 
 
 			</p>
 
 			<p>
 				<i> june 27 19 </i> <br>
-				Elopsterbation <br><br> 
+				Elopsterbation <br><br> <br> 
 			</p>
 
 
