--- a/54687395.html
+++ b/54687395.html
@@ -19,7 +19,7 @@
 
 			<h1>music</h1>
 			
-			<a href="index.html" aling=left >home</a>
+			<a href="index.html" aling=top >home</a>
 		
 			<iframe width="700" height="480" src="https://www.youtube.com/embed/y3r8Q6dHZV8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			
